tests/typing/bad/testfile-extends-1.scala
class C extends Any {}
object Main { def main(args: Array[String]) { } }
